# snowflake-ml-python

./: .bazelrc  .darglint  .flake8  .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  _typos.toml  conda-env-extended.yml  conda-env-snowflake.yml  conda-env.yml  mypy.ini  packages.bzl  requirements.txt  requirements.yml  yamlfix.toml
bazel/: BUILD.bazel  add_pytest_marks.py  check_feature_tags.py  conda_env_test.sh  conda_env_utils.py  filter_affected_targets.py  generate_conda_env.py  generate_requirements.py  get_affected_targets.sh  py_rules.bzl  repo_paths.bzl  repo_paths_test.py  requirements_conda_env_test.sh  test_wrapper.sh  wheelbuilder.py
bazel/coverage_tool/: BUILD.bazel  coverage_tool.py
bazel/environments/: BUILD.bazel  conda-env-all.yml  conda-env-build-test.yml  conda-env-build.yml  conda-env-core.yml  conda-env-keras.yml  conda-env-llm.yml  conda-env-ml.yml  conda-env-snowflake.yml  conda-env-torch.yml  conda-env.yml  conda-gpu-env.yml  conda-optional-dependency-keras.yml  conda-optional-dependency-llm.yml  conda-optional-dependency-ml.yml  conda-optional-dependency-torch.yml  fetch_conda_env_config.bzl  requirements_core.txt  requirements_keras.txt  requirements_llm.txt  requirements_ml.txt  requirements_torch.txt
bazel/mypy/: BUILD.bazel  CREDITS.md  main.py  mypy.bzl  mypy.sh.tpl
bazel/requirements/: BUILD.bazel  changelog_version_check.sh  parse_and_generate_requirements.py  requirements.schema.json  rules.bzl  update_bazelrc.py  update_model_logger_version.py  update_pinned_snowml_python.py  update_pinned_snowml_python_test.py  update_version_requirements.py
bazel/requirements/templates/: BUILD.bazel  bazelrc.tpl  meta.tpl.yaml  pyproject.toml
ci/tools/: BUILD.bazel  coverage_dashboard_ddl.sql  parse_coverage.py  test_parse_coverage.py  test_upload_result.py  upload_result.py
codegen/: BUILD.bazel  build_file_autogen.py  codegen_rules.bzl  estimator_autogen_tool.py  estimator_wrapper_fit.sql  init_template.py_template  sklearn_wrapper_autogen.py  sklearn_wrapper_generator.py  sklearn_wrapper_template.py_template  snowpandas_autogen_test_template.py_template  snowpark_pandas_autogen_test_template.py_template  transformer_autogen_test_template.py_template
docs/: BUILD.bazel  README.md
docs/source/: BUILD.bazel  container-runtime.inv  cortex.rst  data.rst  data_sharded_data_connector.rst  dataset.rst  distributors.rst  experiment.rst  feature_store.rst  fileset.rst  index-container.rst  index-cortex.rst  index-standard.rst  index.rst  jobs.rst  model.rst  model_batch.rst  modeling.rst  modeling_distributors.rst  monitoring.rst  registry.rst
docs/sphinxconf/: conf.py  unsupported_functions_by_class.csv
snowflake/cortex/: BUILD.bazel  __init__.py  _classify_text.py  _complete.py  _embed_text_1024.py  _embed_text_768.py  _extract_answer.py  _finetune.py  _sentiment.py  _sse_client.py  _summarize.py  _test_util.py  _translate.py  _util.py  classify_text_test.py  complete_test.py  embed_text_1024_test.py  embed_text_768_test.py  extract_answer_test.py  finetune_test.py  package_visibility_test.py  sentiment_test.py  sse_test.py  summarize_test.py  translate_test.py
snowflake/cortex/json_mode_test_utils/: schema_utils.py
snowflake/ml/: BUILD.bazel  decorators.py  packages.bzl  requirements.bzl  version.bzl  version.py
snowflake/ml/_internal/: BUILD.bazel  cuda_utils.py  cuda_utils_test.py  env.py  env_utils.py  env_utils_test.py  file_utils.py  file_utils_test.py  init_utils.py  migrator_utils.py  platform_capabilities.py  platform_capabilities_test.py  relax_version_strategy.py  telemetry.py  telemetry_test.py  type_utils.py
snowflake/ml/calibration/: estimators_info.bzl
snowflake/ml/covariance/: BUILD.bazel  estimators_info.bzl
snowflake/ml/data/: BUILD.bazel  __init__.py  data_connector.py  data_connector_test.py  data_ingestor.py  data_source.py  ingestor_utils.py  torch_dataset.py  torch_utils.py
snowflake/ml/dataset/: BUILD.bazel  __init__.py  dataset.py  dataset_factory.py  dataset_metadata.py  dataset_metadata_test.py  dataset_reader.py
snowflake/ml/experiment/: BUILD.bazel  __init__.py  _experiment_info.py  _experiment_info_test.py  _source_info.py  _source_info_test.py  callback.py  callback_test.py  experiment_tracking.py  experiment_tracking_test.py  utils.py  utils_test.py
snowflake/ml/feature_selection/: estimators_info.bzl
snowflake/ml/feature_store/: BUILD.bazel  __init__.py  _compute_fn_validation.py  access_manager.py  aggregation.py  aggregation_test.py  entity.py  feature.py  feature_group.py  feature_group_test.py  feature_store.py  feature_store_backfill_test.py  feature_store_entity_test.py  feature_store_feature_group_read_test.py  feature_store_feature_group_test.py  feature_store_feature_group_training_set_test.py  feature_store_initialization_warehouse_test.py  feature_store_oft_online_config_test.py  feature_store_realtime_dataset_test.py  feature_store_realtime_feature_view_read_test.py  feature_store_realtime_test.py  feature_store_refresh_history_test.py  feature_store_snapshot_validation_test.py  feature_store_stream_source_test.py  feature_store_streaming_update_test.py  feature_view.py  feature_view_append_only_validation.py  feature_view_refresh_freq.py  feature_view_test.py  interval_utils.py  metadata_manager.py  metadata_manager_test.py  online_service.py  online_service_http_client.py  online_service_http_client_test.py  online_service_test.py  realtime_config.py  realtime_config_test.py  realtime_dataset.py  realtime_dataset_udf.py  (+11 more)
snowflake/ml/fileset/: BUILD.bazel  README.md  embedded_stage_fs.py  embedded_stage_fs_test.py  fileset.py  fileset_errors.py  fileset_test.py  parquet_parser.py  parquet_parser_test.py  parquet_test_util.py  sfcfs.py  sfcfs_test.py  snowfs.py  snowfs_test.py  stage_fs.py  stage_fs_test.py  tf_dataset.py  tf_dataset_test.py  torch_datapipe.py  torch_datapipe_test.py
snowflake/ml/framework/: BUILD.bazel  _utils.py  base.py  pipeline.py
(+1626 files in other folders)
