load("@rules_java//java:defs.bzl", "java_binary")

exports_files([
    "CHANGELOG.md",
    "README.md",
    "conda-env-extended.yml",
    "conda-env-snowflake.yml",
    "conda-env.yml",
    "mypy.ini",
    "requirements.txt",
    "requirements.yml",
])

java_binary(
    name = "bazel-diff",
    main_class = "com.bazel_diff.Main",
    runtime_deps = ["@bazel_diff//jar"],
)
