module(
    name = "snowml",
    repo_name = "SnowML",
)

# --- Published dependencies ---

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_python", version = "2.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "prodrive_technologies_bazel_latex", version = "1.2.2-20250401-c552d5b", repo_name = "bazel_latex")

# TexLive repos from bazel_latex needed by //docs and //third_party/rules_sphinx
texlive_repositories = use_extension("@bazel_latex//:extensions.bzl", "texlive_repositories")
texlive_repositories.install()
use_repo(
    texlive_repositories,
    "texlive_texmf__texmf-dist__fonts__enc__dvips__newtx",
    "texlive_texmf__texmf-dist__fonts__enc__dvips__txfonts",
    "texlive_texmf__texmf-dist__fonts__map__dvips__newtx",
    "texlive_texmf__texmf-dist__fonts__map__dvips__newtxsf",
    "texlive_texmf__texmf-dist__fonts__map__dvips__txfonts",
    "texlive_texmf__texmf-dist__fonts__map__dvips__updmap",
    "texlive_texmf__texmf-dist__fonts__map__pdftex__updmap",
    "texlive_texmf__texmf-dist__fonts__tfm__public__newtx",
    "texlive_texmf__texmf-dist__fonts__tfm__public__newtxsf",
    "texlive_texmf__texmf-dist__fonts__tfm__public__txfonts",
    "texlive_texmf__texmf-dist__fonts__type1__public__newtx",
    "texlive_texmf__texmf-dist__fonts__type1__public__newtxsf",
    "texlive_texmf__texmf-dist__fonts__type1__public__txfonts",
    "texlive_texmf__texmf-dist__fonts__vf__public__newtx",
    "texlive_texmf__texmf-dist__fonts__vf__public__newtxsf",
    "texlive_texmf__texmf-dist__fonts__vf__public__txfonts",
    "texlive_texmf__texmf-dist__tex__generic__kastrup",
    "texlive_texmf__texmf-dist__tex__generic__tex-ini-files",
    "texlive_texmf__texmf-dist__tex__latex__anyfontsize",
    "texlive_texmf__texmf-dist__tex__latex__newtx",
    "texlive_texmf__texmf-dist__tex__latex__newtxsf",
    "texlive_texmf__texmf-dist__tex__latex__preview",
    "texlive_texmf__texmf-dist__tex__latex__tools",
    "texlive_texmf__texmf-dist__tex__latex__txfonts",
    "texlive_texmf__texmf-dist__web2c",
)

# --- Conda Python toolchain ---

conda_toolchain = use_extension("//third_party/rules_conda:extensions.bzl", "conda_toolchain")
use_repo(conda_toolchain, "snowml_conda", "snowml_conda_env", "snowml_toolchain")

register_toolchains("@snowml_toolchain//:py_toolchain")

# --- Hermetic CC toolchain (Linux only, avoids host ccache issues with cgo) ---

bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

# --- Go toolchain (proxy) ---

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//model_container_services_deployment/proxy:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//model_container_services_deployment/proxy:go.mod")
use_repo(
    go_deps,
    "com_github_apache_arrow_go_v18",
    "com_github_buger_jsonparser",
    "com_github_caarlos0_env_v11",
    "com_github_snowflakedb_gosnowflake",
    "in_gopkg_natefinch_lumberjack_v2",
    "in_gopkg_yaml_v2",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_log",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "io_opentelemetry_go_otel_sdk_metric",
    "org_golang_google_grpc",
    "org_golang_x_sync",
    "org_uber_go_zap",
)

# --- External tools ---

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "bazel_diff",
    sha256 = "eca2d221f5c3ec9545c841ed62d319bbb59e447a1ceade563bc8f8e1b9186a34",
    urls = ["https://github.com/Tinder/bazel-diff/releases/download/5.0.1/bazel-diff_deploy.jar"],
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "firstpass",
    branch = "main",
    build_file = "//third_party/firstpass:firstpass.BUILD",
    remote = "git@github.com:snowflake-eng/firstpass.git",
)
