load("@rules_python//python:defs.bzl", native_py_test = "py_test")

package(default_visibility = ["//visibility:public"])

native_py_test(
    name = "repo_paths_test",
    srcs = ["repo_paths_test.py"],
    data = ["repo_paths.bzl"],
    python_version = "PY3",
    srcs_version = "PY3",
)

sh_binary(
    name = "test_wrapper",
    srcs = ["test_wrapper.sh"],
)

# Package group for common targets in the repo.
package_group(
    name = "snowml_public_common",
    packages = [
        "//bazel/...",
        "//ci/...",
        "//docs/...",
    ],
)
