load("//bazel:py_rules.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "templates",
    srcs = [
        "init_template.py_template",
        "sklearn_wrapper_template.py_template",
        "snowpark_pandas_autogen_test_template.py_template",
        "transformer_autogen_test_template.py_template",
    ],
)

py_library(
    name = "codegen_lib",
    srcs = [
        "sklearn_wrapper_autogen.py",
        "sklearn_wrapper_generator.py",
    ],
    deps = [],
)

py_binary(
    name = "estimator_autogen_tool",
    srcs = [
        "estimator_autogen_tool.py",
    ],
    data = [
        ":templates",
    ],
    deps = [":codegen_lib"],
)
