load("@rules_sphinx//:defs.bzl", "sphinx_docs")
load("//:packages.bzl", "PACKAGES")

package_group(
    name = "docs_package",
    packages = [
        "//docs/...",
    ],
)

sphinx_docs(
    name = "docs",
    srcs = [
        "//docs/source",
    ],
    conf = "sphinxconf",
    latex_dependencies = [
        "@texlive_texmf__texmf-dist__tex__latex__anyfontsize",
        "@texlive_texmf__texmf-dist__tex__latex__tools",
        "@texlive_texmf__texmf-dist__tex__latex__txfonts",
        "@texlive_texmf__texmf-dist__tex__latex__newtx",
        "@texlive_texmf__texmf-dist__tex__latex__newtxsf",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__txfonts",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__newtx",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__newtxsf",
        "@texlive_texmf__texmf-dist__fonts__type1__public__txfonts",
        "@texlive_texmf__texmf-dist__fonts__type1__public__newtx",
        "@texlive_texmf__texmf-dist__fonts__type1__public__newtxsf",
        "@texlive_texmf__texmf-dist__fonts__vf__public__txfonts",
        "@texlive_texmf__texmf-dist__fonts__vf__public__newtx",
        "@texlive_texmf__texmf-dist__fonts__vf__public__newtxsf",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__txfonts",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__newtx",
        "@texlive_texmf__texmf-dist__tex__latex__preview",
        "@texlive_texmf__texmf-dist__tex__generic__kastrup",
        "@bazel_latex//packages:amsmath",
        "@bazel_latex//packages:amsthm",
        "@bazel_latex//packages:amssymb",
        "@bazel_latex//packages:amstext",
        "@bazel_latex//packages:xkeyval",
    ],
    latex_font_maps = [
        "@texlive_texmf__texmf-dist__fonts__map__dvips__updmap",
        "@texlive_texmf__texmf-dist__fonts__map__pdftex__updmap",
        "@texlive_texmf__texmf-dist__fonts__map__dvips__txfonts",
        "@texlive_texmf__texmf-dist__fonts__map__dvips__newtx",
        "@texlive_texmf__texmf-dist__fonts__map__dvips__newtxsf",
    ],
    visibility = ["//visibility:public"],
    deps = PACKAGES,
)
