load("//bazel:py_rules.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:private"])

py_binary(
    name = "parse_coverage",
    srcs = ["parse_coverage.py"],
    deps = [],
)

py_binary(
    name = "upload_result",
    srcs = ["upload_result.py"],
    deps = [
        "//snowflake/ml/utils:connection_params",
    ],
)

py_test(
    name = "test_parse_coverage",
    srcs = ["test_parse_coverage.py"],
    shard_count = 2,
    tags = [],
    deps = [":parse_coverage"],
)

py_test(
    name = "test_upload_result",
    srcs = ["test_upload_result.py"],
    shard_count = 5,
    tags = [],
    deps = [
        ":upload_result",
        "//snowflake/ml/utils:connection_params",
    ],
)
