load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package_group(
    name = "cortex",
    packages = [
        "//snowflake/cortex/...",
        "//snowflake/ml/...",
    ],
)

package(default_visibility = [
    ":cortex",
    "//bazel:snowml_public_common",
])

py_library(
    name = "util",
    srcs = ["_util.py"],
    deps = [":sse_client"],
)

py_library(
    name = "test_util",
    srcs = ["_test_util.py"],
)

py_library(
    name = "sse_client",
    srcs = ["_sse_client.py"],
)

py_library(
    name = "complete",
    srcs = ["_complete.py"],
    deps = [
        ":util",
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_test(
    name = "complete_test",
    srcs = ["complete_test.py"],
    deps = [
        ":complete",
        ":test_util",
        "//snowflake/ml/utils:connection_params",
    ],
)

py_library(
    name = "extract_answer",
    srcs = ["_extract_answer.py"],
    deps = [
        ":util",
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_test(
    name = "extract_answer_test",
    srcs = ["extract_answer_test.py"],
    deps = [
        ":extract_answer",
        ":test_util",
        "//snowflake/ml/utils:connection_params",
    ],
)

py_library(
    name = "sentiment",
    srcs = ["_sentiment.py"],
    deps = [
        ":util",
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_test(
    name = "sentiment_test",
    srcs = ["sentiment_test.py"],
    deps = [
        ":sentiment",
        ":test_util",
        "//snowflake/ml/utils:connection_params",
    ],
)

py_library(
    name = "summarize",
    srcs = ["_summarize.py"],
    deps = [
        ":util",
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_test(
    name = "summarize_test",
    srcs = ["summarize_test.py"],
    deps = [
        ":summarize",
        ":test_util",
        "//snowflake/ml/utils:connection_params",
    ],
)

py_test(
    name = "sse_test",
    srcs = ["sse_test.py"],
    deps = [
        ":complete_test",
        ":sse_client",
        ":util",
    ],
)

py_library(
    name = "translate",
    srcs = ["_translate.py"],
    deps = [
        ":util",
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_test(
    name = "translate_test",
    srcs = ["translate_test.py"],
    deps = [
        ":test_util",
        ":translate",
        "//snowflake/ml/utils:connection_params",
    ],
)

py_library(
    name = "init",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":complete",
        ":extract_answer",
        ":sentiment",
        ":summarize",
        ":translate",
    ],
)

py_test(
    name = "package_visibility_test",
    srcs = ["package_visibility_test.py"],
    deps = [
        ":init",
    ],
)

py_package(
    name = "cortex_pkg",
    packages = ["snowflake.cortex"],
    deps = [
        ":init",
    ],
)
