load("//bazel:py_rules.bzl", "py_library", "snowml_wheel")
load(":packages.bzl", "PACKAGES")
load(":requirements.bzl", "EXTRA_REQUIREMENTS", "REQUIREMENTS")
load(":version.bzl", "VERSION")

package(default_visibility = ["//visibility:public"])

exports_files(["requirements.bzl"])

genrule(
    name = "generate_version",
    outs = ["version.py"],
    cmd = "echo 'VERSION=\"" + VERSION + "\"'> $@",
)

py_library(
    name = "version",
    srcs = ["version.py"],
    deps = [],
)

# This is the project description attached to the wheel METADATA, which will
# be rendered on the project homepage on pypi.org.
genrule(
    name = "generate_description",
    srcs = [
        "//:CHANGELOG.md",
        "//:README.md",
    ],
    outs = ["description.md"],
    cmd = "cat $(location //:README.md) $(location //:CHANGELOG.md) > $@",
)

snowml_wheel(
    name = "wheel",
    compatible_with_snowpark = False,
    description_file = ":description.md",
    development_status = "PrPr",
    extra_requires = EXTRA_REQUIREMENTS,
    requires = REQUIREMENTS,
    version = VERSION,
    deps = PACKAGES,
)
