[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowflake-ml-python"
authors = [
  {name = "Snowflake, Inc", email = "support@snowflake.com"}
]
description = "The machine learning client library that is used for interacting with Snowflake to build machine learning solutions."
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.9, <3.13"
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://github.com/snowflakedb/snowflake-ml-python"
Documentation = "https://docs.snowflake.com/developer-guide/snowpark-ml"
Repository = "https://github.com/snowflakedb/snowflake-ml-python"
Issues = "https://github.com/snowflakedb/snowflake-ml-python/issues"
Changelog = "https://github.com/snowflakedb/snowflake-ml-python/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "snowflake.ml.version.VERSION"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snowflake*"]
