load("//bazel:py_rules.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "env",
    srcs = ["env.py"],
    deps = ["//snowflake/ml:version"]
)

py_library(
    name = "init_utils",
    srcs = ["init_utils.py"],
    deps = [],
)

py_library(
    name = "type_utils",
    srcs = ["type_utils.py"],
)

py_library(
    name = "file_utils",
    srcs = ["file_utils.py"],
)

py_test(
    name = "file_utils_test",
    srcs = ["file_utils_test.py"],
    deps = [
        ":file_utils",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "env_utils",
    srcs = ["env_utils.py"],
    deps = [
        "//snowflake/ml/_internal/utils:query_result_checker",
        ":env",
    ],
)

py_test(
    name = "env_utils_test",
    srcs = ["env_utils_test.py"],
    deps = [
        ":env_utils",
        ":env",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "telemetry",
    srcs = ["telemetry.py"],
    deps = [
        "//snowflake/ml/_internal:env",
        "//snowflake/ml/_internal/exceptions:exceptions",
    ],
)

py_test(
    name = "telemetry_test",
    srcs = ["telemetry_test.py"],
    deps = [
        ":telemetry",
        "//snowflake/ml/_internal:env",
        "//snowflake/ml/_internal/exceptions:exceptions",
    ],
)
