load("//bazel:py_rules.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "env",
    srcs = ["env.py"],
    deps = ["//snowflake/ml:version"],
)

py_library(
    name = "init_utils",
    srcs = ["init_utils.py"],
    deps = [],
)

py_library(
    name = "type_utils",
    srcs = ["type_utils.py"],
)

py_library(
    name = "file_utils",
    srcs = ["file_utils.py"],
    deps = [
        "//snowflake/ml/_internal/exceptions",
    ],
)

py_test(
    name = "file_utils_test",
    srcs = ["file_utils_test.py"],
    deps = [
        ":file_utils",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "env_utils",
    srcs = ["env_utils.py"],
    deps = [
        ":env",
        "//snowflake/ml/_internal/exceptions",
        "//snowflake/ml/_internal/utils:query_result_checker",
        "//snowflake/ml/_internal/utils:retryable_http",
    ],
)

py_test(
    name = "env_utils_test",
    srcs = ["env_utils_test.py"],
    deps = [
        ":env",
        ":env_utils",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "telemetry",
    srcs = ["telemetry.py"],
    deps = [
        "//snowflake/ml/_internal:env",
        "//snowflake/ml/_internal/exceptions",
    ],
)

py_test(
    name = "telemetry_test",
    srcs = ["telemetry_test.py"],
    deps = [
        ":telemetry",
        "//snowflake/ml/_internal:env",
        "//snowflake/ml/_internal/exceptions",
    ],
)

py_library(
    name = "cuda_utils",
    srcs = ["cuda_utils.py"],
)

py_test(
    name = "cuda_utils_test",
    srcs = ["cuda_utils_test.py"],
    deps = [
        ":cuda_utils",
    ],
)

py_library(
    name = "migrator_utils",
    srcs = ["migrator_utils.py"],
)
