load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "data_source",
    srcs = ["data_source.py"],
)

py_library(
    name = "data_ingestor",
    srcs = ["data_ingestor.py"],
    deps = [
        ":data_source",
    ],
)

py_library(
    name = "ingestor_utils",
    srcs = ["ingestor_utils.py"],
    deps = [
        ":data_source",
        "//snowflake/ml/fileset:snowfs",
    ],
)

py_library(
    name = "torch_utils",
    srcs = ["torch_utils.py"],
)

py_library(
    name = "data_connector",
    srcs = ["data_connector.py"],
    deps = [
        ":data_ingestor",
        ":torch_utils",
        "//snowflake/ml/_internal:env",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/data/_internal:arrow_ingestor",
    ],
)

py_test(
    name = "data_connector_test",
    srcs = ["data_connector_test.py"],
    optional_dependencies = [
        "torch",
        "tensorflow",
    ],
    deps = [
        ":data_connector",
        "//snowflake/ml/fileset:parquet_test_util",
    ],
)

py_library(
    name = "data",
    srcs = ["__init__.py"],
    deps = [
        ":data_connector",
        ":data_source",
    ],
)

py_package(
    name = "data_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":data",
        "//snowflake/ml/dataset",
    ],
)
